add a background color

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ body {
   justify-content: center;
   align-items: center;
   /* font-size: 1.25em; */
+  background-color: #111;
+  color: white;
 }
 
 select,
